{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 26,
  "lineage": "33d8638c-2b10-43da-2337-eba782ce0a82",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:network-acl/acl-02937f0696669b122",
            "default_network_acl_id": "acl-02937f0696669b122",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02937f0696669b122",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "058264261029",
            "subnet_ids": [
              "subnet-00059762042e61293",
              "subnet-04909f25bb0e86353",
              "subnet-077b1bfd1d864e854",
              "subnet-0abd2e64f9e215e26",
              "subnet-0aebeaa46a2d25e19",
              "subnet-0d0642a34073c09a7"
            ],
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-default",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-default",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:route-table/rtb-0c115c84dc977496a",
            "default_route_table_id": "rtb-0c115c84dc977496a",
            "id": "rtb-0c115c84dc977496a",
            "owner_id": "058264261029",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-default",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-default",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:security-group/sg-0fc643891e740cbb2",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0fc643891e740cbb2",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "058264261029",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-default",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-default",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc865dfe880e7251",
            "arn": "arn:aws:ec2:us-east-1:058264261029:elastic-ip/eipalloc-0bc865dfe880e7251",
            "domain": "vpc",
            "id": "eipalloc-0bc865dfe880e7251",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-214-46-88.compute-1.amazonaws.com",
            "public_ip": "18.214.46.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:internet-gateway/igw-0c493e2c6b663faf4",
            "id": "igw-0c493e2c6b663faf4",
            "owner_id": "058264261029",
            "tags": {
              "Name": "HR-stag-terraform-test-vpc",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc865dfe880e7251",
            "association_id": "eipassoc-08ee7cf51e9c1c389",
            "connectivity_type": "public",
            "id": "nat-01d08dcedc44f97b0",
            "network_interface_id": "eni-074c989ec4713d691",
            "private_ip": "10.0.101.56",
            "public_ip": "18.214.46.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-077b1bfd1d864e854",
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0234eaec6577a2e5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01d08dcedc44f97b0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0234eaec6577a2e5d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c493e2c6b663faf4",
            "id": "r-rtb-0d0ca2b865e1a56ac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0ca2b865e1a56ac",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:route-table/rtb-0afbbf696a7d3d418",
            "id": "rtb-0afbbf696a7d3d418",
            "owner_id": "058264261029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-db",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-db",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:route-table/rtb-0234eaec6577a2e5d",
            "id": "rtb-0234eaec6577a2e5d",
            "owner_id": "058264261029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-private",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-private",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:route-table/rtb-0d0ca2b865e1a56ac",
            "id": "rtb-0d0ca2b865e1a56ac",
            "owner_id": "058264261029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-public",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-public",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a42c7433d4e614b0",
            "route_table_id": "rtb-0afbbf696a7d3d418",
            "subnet_id": "subnet-0aebeaa46a2d25e19"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3c0c72b96b12b03",
            "route_table_id": "rtb-0afbbf696a7d3d418",
            "subnet_id": "subnet-0d0642a34073c09a7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a17befd380af98f",
            "route_table_id": "rtb-0234eaec6577a2e5d",
            "subnet_id": "subnet-00059762042e61293"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045045eb5200c299f",
            "route_table_id": "rtb-0234eaec6577a2e5d",
            "subnet_id": "subnet-04909f25bb0e86353"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001885fcc3b74d206",
            "route_table_id": "rtb-0d0ca2b865e1a56ac",
            "subnet_id": "subnet-077b1bfd1d864e854"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067a4c91b0a1fcee0",
            "route_table_id": "rtb-0d0ca2b865e1a56ac",
            "subnet_id": "subnet-0abd2e64f9e215e26"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-0aebeaa46a2d25e19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aebeaa46a2d25e19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-0d0642a34073c09a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0642a34073c09a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-00059762042e61293",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00059762042e61293",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-04909f25bb0e86353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04909f25bb0e86353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-077b1bfd1d864e854",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077b1bfd1d864e854",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-0abd2e64f9e215e26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abd2e64f9e215e26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-terraform-test-vpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0097b649287bf07cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:vpc/vpc-0097b649287bf07cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02937f0696669b122",
            "default_route_table_id": "rtb-0c115c84dc977496a",
            "default_security_group_id": "sg-0fc643891e740cbb2",
            "dhcp_options_id": "dopt-0419d1d31d59a4743",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0097b649287bf07cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c115c84dc977496a",
            "owner_id": "058264261029",
            "tags": {
              "Name": "HR-stag-terraform-test-vpc",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-terraform-test-vpc",
              "environment": "stag",
              "owners": "HR"
            }
          }
        }
      ]
    }
  ]
}